# holopaswin

./: .gitignore  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
docs/: index.html  style.css
notebooks/: holopaswin_exp1.ipynb  holopaswin_exp2.ipynb
results/ablation_study/architecture/: architecture_ablation.csv  architecture_table.tex  resnet18_pretrained_residual_best.pth  swin_pretrained_direct_best.pth  swin_pretrained_residual_best.pth  swin_scratch_residual_best.pth
results/ablation_study/loss_components/: ablation_results.csv  ablation_table.tex  full_model_best.pth  full_model_history.csv  no_freq_best.pth  (+7 more)
results/baseline_comparison/: baseline_per_sample.json  baseline_results.csv  baseline_table.tex  hrnet_best.pth  hrnet_final.pth  hrnet_training_log.json  resnet_unet_best.pth  resnet_unet_final.pth  resnet_unet_training_log.json  unet_best.pth  unet_final.pth  unet_training_log.json
results/experiment1/: holopaswin_exp1.pth  holopaswin_exp1_metadata.txt
results/experiment10/: check_stats.txt  holopaswin_exp10.pth  test_results.txt
results/experiment11/: check_stats.txt  holopaswin_exp11.pth  interrupted_swin_holo.pth  test_results.txt
results/experiment12/: check_stats.txt  holopaswin_exp12.pth  start_train_time.ts  stop_train_time.ts  test_results.txt
results/experiment2/: holopaswin_exp2.pth  holopaswin_exp2_metadata.txt  test_results.txt  training_progress.txt
results/experiment3/: detailed_test.py  detailed_test.txt  holopaswin_exp3.pth
results/experiment4/: holopaswin_exp4.pth
results/experiment5/: holopaswin_exp5.pth  test_results.txt
results/experiment6/: holopaswin_exp6.pth
results/experiment7/: holopaswin_exp7.pth
results/experiment8/: holopaswin_exp8.pth
results/experiment9/: README.md  check_stats.txt  holopaswin_exp9.pth  test_results.txt
scripts/: __init__.py  ablation_architecture.py  ablation_loss_components.py  ablation_loss_weights.py  ablation_loss_weights_sensitivity.py  ablation_robustness.py  benchmark_inference.py  check_stats.py  create_architecture_comparison.py  create_zoom_figures.py  detailed_test.py  eval_baselines.py  install-hooks.sh  plot_training_curves.py  publish_model.py  run_ablation_study.sh  run_all_ablations_parallel.py  run_all_ablations_sequential.py  run_baseline_tests.sh  train_baselines.py
src/: check_stats.py  detailed_test.py  inference.py  test.py  train.py
src/holopaswin/: __init__.py  dataset.py  loss.py  model.py  propagator.py  resnet_unet.py  swin_transformer.py
(+14 files in other folders)
